# HomeBlocks

./: .codecov.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  apply-clang-format.sh  conanfile.py  gcovr.cfg
.github/workflows/: build_commit.yml  build_dependencies.yml  build_homestore.yml  build_with_conan.yml  cache_dependencies.yml  conan_build.yml  install_homestore.yml  main_conan_build.yml  merge_conan_build.yml  pr_conan_build.yml
.jenkins/: Dockerfile  Jenkinsfile  jenkinsfile_nightly_debug_sanitize  jenkinsfile_nightly_release
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  example_lib.cpp  obj_store.cpp
src/include/: engine.h  home_replication.h  home_replication.hpp  journal.h  repl_service.h
src/include/home_replication/: common.hpp  repl_decls.h  repl_service.h  repl_service.hpp  repl_set.h  repl_set.hpp  repl_set_listener.hpp
src/include/homeblks/: .volume_mgr.hpp.swp  common.hpp  home_blks.hpp  volume_mgr.hpp
src/include/homeblocks/: common.hpp  homeblocks.hpp  volume_manager.hpp
src/lib/: CMakeLists.txt  common.cpp  home_blks_config.fbs  home_blks_config.hpp  homeblks_impl.cpp  homeblks_impl.hpp  homeblocks_impl.cpp  homeblocks_impl.hpp  index.cpp  listener.cpp  listener.hpp  repl_config.fbs  volume_manager.cpp  volume_mgr.cpp
src/lib/engine/: CMakeLists.txt  home_journal.h  home_storage_engine.cpp  home_storage_engine.h  storage_engine.h
src/lib/log_store/: home_raft_log_store.cpp  home_raft_log_store.h  journal_entry.h  repl_log_store.hpp  storage_engine_buffer.h
src/lib/memory_backend/: CMakeLists.txt  mem_homeblks.cpp  mem_homeblks.hpp  mem_homeblocks.cpp  mem_homeblocks.hpp
src/lib/service/: CMakeLists.txt  home_repl_backend.cpp  home_repl_backend.h  home_repl_service.cpp  home_repl_service.h  repl_backend.h  repl_config.h  repl_service.cpp  repl_service.h  repl_service_impl.cpp  repl_service_impl.h  repl_service_impl.hpp
src/lib/state_machine/: CMakeLists.txt  repl_set_impl.h  replica_set.cpp  replica_set.hpp  replica_set_impl.cpp  replica_set_impl.hpp  rpc_data_channel.cpp  rpc_data_channel.h  state_machine.cpp  state_machine.h  state_manager.h
src/lib/storage/: CMakeLists.txt  home_journal.cpp  home_storage_engine.cpp  home_storage_engine.h  journal.h  storage_engine.h
src/lib/tests/: CMakeLists.txt  fixture_app.cpp
src/lib/volume/: CMakeLists.txt  fixed_index_table.hpp  index.hpp  index_fixed_kv.hpp  index_fixed_table.hpp  index_kv_fixed.hpp  index_kv_prefix.hpp  index_prefix_kv.hpp  index_prefix_table.hpp  index_table_includes.hpp  prefix_index_table.hpp  volume.cpp  volume.hpp  volume_chunk_selector.cpp  volume_chunk_selector.hpp
src/lib/volume/tests/: CMakeLists.txt  test_common.hpp  test_volume.cpp  test_volume_chunk_selector.cpp  test_volume_io.cpp
src/lib/volume/tests/test_scripts/: io_test.py  long_running.py
src/mocks/: CMakeLists.txt  repl_service.cpp
src/mocks/tests/: ReplServiceTest.cpp
src/state_machine/: CMakeLists.txt  state_machine.cpp
src/tests/: CMakeLists.txt  mock_storage_engine.h  test_common.h  test_home_local_journal.cpp  test_home_raft_log_store.cpp  test_home_sm_store.cpp  test_repl_state_machine.cpp  test_rpc_data_channel.cpp
test_package/: CMakeLists.txt  test_package.cpp
